# pizero

./: .env.example  .gitignore  CUSTOMIZATION_EXAMPLES.md  HIGH_SCHOOL_GUIDE.md  MANIFEST.in  PACKAGE_STRUCTURE.md  PROJECT_README.md  QUICK_START.md  README.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  check_environment.py  main.py  pyproject.toml  requirements.txt  setup.py  setup.sh  test_simulation.py  validate_code.py
pizero/: __init__.py  assistant.py  cli.py  config.py  image.py
scripts/: validate_code.py
tests/: __init__.py  test_simulation.py
